--- a/unist_home.html
+++ b/unist_home.html
@@ -389,10 +389,11 @@
           <a href="mailto:jhkim4139@dongjin.com" class="email-link"><i class="fas fa-envelope contact-icon"></i>jhkim4139@dongjin.com</a>
         </div>
         <div class="member-info"><strong>주소:</strong>
-          <a href="https://maps.google.com/?q=인천광역시 서구 백범로 644" target="_blank" class="address-link"><i class="fas fa-map-marker-alt contact-icon"></i>인천광역시 서구 백범로 644</a>
+          <a href="https://maps.google.com/?q=인천광역시 서구 백범로 644" target="_blank" class="address-link"><i class="fas fa-map-marker-alt contact-icon"></i>
+              경기도 성남시 분당구 판교로 255번길35 실리콘파크</a>
         </div>
         <div class="company-info">
-          <h4>동진세미켐(주)</h4>
+          <h4>동진쎄미켐(주)</h4>
           <div class="member-info"><strong>직위:</strong> 연구위원</div>
           <div class="member-info"><strong>웹사이트:</strong>
             <a href="http://www.dongjin.com" target="_blank" class="website-link"><i class="fas fa-globe contact-icon"></i>www.dongjin.com</a>
