--- a/unist_home.html
+++ b/unist_home.html
@@ -289,6 +289,9 @@
         <div class="member-info"><strong>연락처:</strong>
           <a href="tel:010-5389-6805" class="phone-link"><i class="fas fa-phone contact-icon"></i>010-5389-6805</a>
         </div>
+        <div class="member-info"><strong>생년월일:</strong>
+          1964.07.20
+        </div>
         <div class="member-info"><strong>이메일:</strong>
           <a href="mailto:wsh@smv.co.kr" class="email-link"><i class="fas fa-envelope contact-icon"></i>wsh@smv.co.kr</a>
         </div>
@@ -312,6 +315,9 @@
         <div class="member-name">주해용 (JU HAE YONG)</div>
         <div class="member-info"><strong>연락처:</strong>
           <a href="tel:010-8576-0580" class="phone-link"><i class="fas fa-phone contact-icon"></i>010-8576-0580</a>
+        </div>
+        <div class="member-info"><strong>생년월일:</strong>
+          1977.08.27
         </div>
         <div class="member-info"><strong>이메일:</strong>
           <a href="mailto:juhy@juno-fa.co.kr" class="email-link"><i class="fas fa-envelope contact-icon"></i>juhy@juno-fa.co.kr</a>
@@ -337,6 +343,9 @@
         <div class="member-info"><strong>연락처:</strong>
           <a href="tel:010-9291-9750" class="phone-link"><i class="fas fa-phone contact-icon"></i>010-9291-9750</a>
         </div>
+        <div class="member-info"><strong>생년월일:</strong>
+          1970.11.06
+        </div>
         <div class="member-info"><strong>이메일:</strong>
           <a href="mailto:hyunsuc.go@qrtkr.com" class="email-link"><i class="fas fa-envelope contact-icon"></i>hyunsuc.go@qrtkr.com</a>
         </div>
@@ -344,7 +353,7 @@
           <a href="https://maps.google.com/?q=경기도 수원시 영통구 창룡대로 256번길 50" target="_blank" class="address-link"><i class="fas fa-map-marker-alt contact-icon"></i>경기도 수원시 영통구 창룡대로 256번길 50</a>
         </div>
         <div class="company-info">
-          <h4>큐알티케이알(주)</h4>
+          <h4>큐알티주식회사</h4>
           <div class="member-info"><strong>직위:</strong> 수석연구원</div>
           <div class="member-info"><strong>웹사이트:</strong>
             <a href="http://www.qrtkr.com" target="_blank" class="website-link"><i class="fas fa-globe contact-icon"></i>www.qrtkr.com</a>
@@ -360,6 +369,9 @@
         <div class="member-name">김영호 (Youngho Kim)</div>
         <div class="member-info"><strong>연락처:</strong>
           <a href="tel:010-7311-3949" class="phone-link"><i class="fas fa-phone contact-icon"></i>010-7311-3949</a>
+        </div>
+        <div class="member-info"><strong>생년월일:</strong>
+          1966.09.05
         </div>
         <div class="member-info"><strong>이메일:</strong>
           <a href="mailto:hoger@ycchem.co.kr" class="email-link"><i class="fas fa-envelope contact-icon"></i>hoger@ycchem.co.kr</a>
@@ -385,6 +397,9 @@
         <div class="member-info"><strong>연락처:</strong>
           <a href="tel:010-2583-4139" class="phone-link"><i class="fas fa-phone contact-icon"></i>010-2583-4139</a>
         </div>
+        <div class="member-info"><strong>생년월일:</strong>
+          1976.09.13
+        </div>
         <div class="member-info"><strong>이메일:</strong>
           <a href="mailto:jhkim4139@dongjin.com" class="email-link"><i class="fas fa-envelope contact-icon"></i>jhkim4139@dongjin.com</a>
         </div>
@@ -409,6 +424,9 @@
         <div class="member-info"><strong>연락처:</strong>
           <a href="tel:010-9158-4713" class="phone-link"><i class="fas fa-phone contact-icon"></i>010-9158-4713</a>
         </div>
+        <div class="member-info"><strong>생년월일:</strong>
+          1971.01.05
+        </div>
         <div class="member-info"><strong>이메일:</strong>
           <a href="mailto:hanmil@enftech.com" class="email-link"><i class="fas fa-envelope contact-icon"></i>hanmil@enftech.com</a>
         </div>
@@ -431,6 +449,9 @@
         <div class="member-name">서동진 (Seo Dongjin)</div>
         <div class="member-info"><strong>연락처:</strong>
           <a href="tel:010-5496-0597" class="phone-link"><i class="fas fa-phone contact-icon"></i>010-5496-0597</a>
+        </div>
+        <div class="member-info"><strong>생년월일:</strong>
+          1969.06.03
         </div>
         <div class="member-info"><strong>이메일:</strong>
           <a href="mailto:dongjin.seo@tel.com" class="email-link"><i class="fas fa-envelope contact-icon"></i>dongjin.seo@tel.com</a>
@@ -455,6 +476,9 @@
         <div class="member-info"><strong>연락처:</strong>
           <a href="tel:010-5496-0597" class="phone-link"><i class="fas fa-phone contact-icon"></i>010-5496-0597</a>
         </div>
+        <div class="member-info"><strong>생년월일:</strong>
+          1971.10.29
+        </div>
         <div class="member-info"><strong>이메일:</strong>
           <a href="mailto:leejh@screen-spe.kr" class="email-link"><i class="fas fa-envelope contact-icon"></i>leejh@screen-spe.kr</a>
         </div>
@@ -477,6 +501,9 @@
         <div class="member-name">임채율 (LIM CHAE YOUL)</div>
         <div class="member-info"><strong>연락처:</strong>
           <a href="tel:010-8630-6606" class="phone-link"><i class="fas fa-phone contact-icon"></i>010-8630-6606</a>
+        </div>
+        <div class="member-info"><strong>생년월일:</strong>
+          1967.07.25
         </div>
         <div class="member-info"><strong>이메일:</strong>
           <a href="mailto:richard@smart-s.net" class="email-link"><i class="fas fa-envelope contact-icon"></i>richard@smart-s.net</a>
@@ -501,6 +528,9 @@
         <div class="member-info"><strong>연락처:</strong>
           <a href="tel:010-2360-2699" class="phone-link"><i class="fas fa-phone contact-icon"></i>010-2360-2699</a>
         </div>
+        <div class="member-info"><strong>생년월일:</strong>
+          1977.04.10
+        </div>
         <div class="member-info"><strong>이메일:</strong>
           <a href="mailto:hoonzaza@shinsung.co.kr" class="email-link"><i class="fas fa-envelope contact-icon"></i>hoonzaza@shinsung.co.kr</a>
         </div>
@@ -523,6 +553,9 @@
         <div class="member-name">전윤석 (Chun Yun Seok)</div>
         <div class="member-info"><strong>연락처:</strong>
           <a href="tel:010-7169-7240" class="phone-link"><i class="fas fa-phone contact-icon"></i>010-7169-7240</a>
+        </div>
+        <div class="member-info"><strong>생년월일:</strong>
+          1964.12.25
         </div>
         <div class="member-info"><strong>이메일:</strong>
           <a href="mailto:yunseok.chun@wonik.com" class="email-link"><i class="fas fa-envelope contact-icon"></i>yunseok.chun@wonik.com</a>
